--- a/client/src/styles/Contact.css
+++ b/client/src/styles/Contact.css
@@ -3,28 +3,28 @@
 .contact-container {
   position: relative;
   z-index: 1;
-  /* margin-bottom: 0rem; */
+  margin-bottom: 0rem;
   padding: rem;
   background: linear-gradient(to bottom, rgb(5, 5, 41), rgb(61, 67, 102));
   font-size: 20px;
-  /* Add styles for the box */
+  
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 75%;
   margin: 2rem auto;
-  margin-bottom: 0rem;
+  /* margin-bottom: 0rem; */
   color: white;
 }
 
 .contact-us-two {
   position: relative;
-  top: 0;
-  left: 0;
+  /* top: 0;
+  left: 0; */
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   object-fit: cover;
-  z-index: -1; /* Set a negative z-index to place the video behind the card */
+  z-index: -1; 
 }
 
 /* .contact-container input[type="text"] {
